--- a/Resources/Private/Language/de.tinyslider.xlf
+++ b/Resources/Private/Language/de.tinyslider.xlf
@@ -13,6 +13,32 @@
       <trans-unit id="settings.items" xml:space="preserve" approved="yes">
                 <source>Items</source>
             <target state="final">Elemente</target></trans-unit>
+
+      <trans-unit id="settings.responsiveItemCount0">
+        <source>Items below 576px display width</source>
+        <target state="final">Elemente unterhalb 576px Displaybreite</target>
+      </trans-unit>
+      <trans-unit id="settings.responsiveItemCount576">
+        <source>Items above 576px display width</source>
+        <target state="final">Elemente oberhalb 576px Displaybreite</target>
+      </trans-unit>
+      <trans-unit id="settings.responsiveItemCount768">
+        <source>Items above 768px display width</source>
+        <target state="final">Elemente oberhalb 768px Displaybreite</target>
+      </trans-unit>
+      <trans-unit id="settings.responsiveItemCount992">
+        <source>Items above 992px display width</source>
+        <target state="final">Elemente oberhalb 992px Displaybreite</target>
+      </trans-unit>
+      <trans-unit id="settings.responsiveItemCount1200">
+        <source>Items above 1200px display width</source>
+        <target state="final">Elemente oberhalb 1200px Displaybreite</target>
+      </trans-unit>
+      <trans-unit id="settings.responsiveItemCount1400">
+        <source>Items above 1400px display width</source>
+        <target state="final">Elemente oberhalb 1400px Displaybreite</target>
+      </trans-unit>
+
       <trans-unit id="settings.gutter" xml:space="preserve" approved="yes">
                 <source>Gutter</source>
             <target state="final">Abstand</target></trans-unit>
